@@ -5,13 +5,12 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 
 import org.junit.jupiter.api.Test;
 import java.util.Arrays;
-
+import java.util.List;
 
 
 class GreedyAlgorithmUnitTest {
 
     private SocialConnector prepareNetwork() {
-        SocialConnector sc = new SocialConnector();
         SocialUser root = new SocialUser("root");
         SocialUser child1 = new SocialUser("child1");
         SocialUser child2 = new SocialUser("child2");
@@ -22,17 +21,16 @@ class GreedyAlgorithmUnitTest {
         SocialUser child31 = new SocialUser("child31");
         SocialUser child311 = new SocialUser("child311");
         SocialUser child3111 = new SocialUser("child3111");
-        child211.addFollowers(Arrays.asList(new SocialUser[]{child2111}));
-        child311.addFollowers(Arrays.asList(new SocialUser[]{child3111}));
-        child21.addFollowers(Arrays.asList(new SocialUser[]{child211}));
-        child31.addFollowers(Arrays.asList(new SocialUser[]{child311, 
-          new SocialUser("child312"), new SocialUser("child313"), new SocialUser("child314")}));
-        child1.addFollowers(Arrays.asList(new SocialUser[]{new SocialUser("child11"), new SocialUser("child12")}));
-        child2.addFollowers(Arrays.asList(new SocialUser[]{child21, new SocialUser("child22"), new SocialUser("child23")}));
-        child3.addFollowers(Arrays.asList(new SocialUser[]{child31}));
-        root.addFollowers(Arrays.asList(new SocialUser[]{child1, child2, child3}));
-        sc.setUsers(Arrays.asList(new SocialUser[]{root, child1, child2, child3, child21, child31, child311, child211}));
-        return sc;
+        child211.addFollowers(List.of(child2111));
+        child311.addFollowers(List.of(child3111));
+        child21.addFollowers(List.of(child211));
+        child31.addFollowers(Arrays.asList(child311,
+                new SocialUser("child312"), new SocialUser("child313"), new SocialUser("child314")));
+        child1.addFollowers(Arrays.asList(new SocialUser("child11"), new SocialUser("child12")));
+        child2.addFollowers(Arrays.asList(child21, new SocialUser("child22"), new SocialUser("child23")));
+        child3.addFollowers(List.of(child31));
+        root.addFollowers(Arrays.asList(child1, child2, child3));
+        return new SocialConnector(List.of(root, child1, child2, child3, child21, child31, child311, child211));
     }
 
     @Test
